处理游戏过关的回调,每过完一关,游戏难度加倍,在图片切换过程中检查游戏是否成功 在主界面处理过关的事件处理,当前关卡通过,进入下一关游戏,弹出一个Dialog

--- a/Mosaic/src/main/res/layout/activity_mosaic.xml
+++ b/Mosaic/src/main/res/layout/activity_mosaic.xml
@@ -7,6 +7,7 @@
         tools:context="com.asiainfo.mosaic.activity.MosaicActivity">
 
     <com.asiainfo.mosaic.view.KiniroMosaicLayout
+            android:id="@+id/game_mosaic"
             android:layout_centerInParent="true"
             android:padding="3dp"
             android:layout_width="match_parent"
