--- a/Mosaic/src/main/res/layout/activity_mosaic.xml
+++ b/Mosaic/src/main/res/layout/activity_mosaic.xml
@@ -14,4 +14,37 @@
             android:layout_height="match_parent">
 
     </com.asiainfo.mosaic.view.KiniroMosaicLayout>
+
+    <RelativeLayout
+            android:layout_margin="3dp"
+            android:layout_above="@id/game_mosaic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        <TextView
+                android:textColor="#EA7821"
+                android:textStyle="bold"
+                android:textSize="30sp"
+                android:text="1"
+                android:background="@drawable/text_bg"
+                android:padding="4dp"
+                android:gravity="center"
+                android:id="@+id/id_level"
+                android:layout_width="70dp"
+                android:layout_height="70dp"/>
+
+        <TextView
+                android:text="120"
+                android:textColor="#EA7821"
+                android:textStyle="bold"
+                android:textSize="30sp"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/text_bg"
+                android:padding="4dp"
+                android:gravity="center"
+                android:id="@+id/id_time"
+                android:layout_width="70dp"
+                android:layout_height="70dp"/>
+
+    </RelativeLayout>
 </RelativeLayout>
